logs/jubatu-chess.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jubatu'...
Listing './lib/python3.5/site-packages/jubatu/games'...
Listing './lib/python3.5/site-packages/jubatu/games/chess'...
Listing './lib/python3.5/site-packages/jubatu/games/chess/backend'...
Compiling './lib/python3.5/site-packages/jubatu/games/chess/backend/chess.py'...
***   File "./lib/python3.5/site-packages/jubatu/games/chess/backend/chess.py", line 1805
    print tag_name, tag_value
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jubatu/games/chess/backend/original_chess.py'...
***   File "./lib/python3.5/site-packages/jubatu/games/chess/backend/original_chess.py", line 1805
    print tag_name, tag_value
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/jubatu/games/chess/frontend'...
Listing './lib/python3.5/site-packages/jubatu/games/chess/frontend/i18n'...
Listing './lib/python3.5/site-packages/jubatu/games/chess/frontend/i18n/sp'...
Listing './lib/python3.5/site-packages/jubatu/games/chess/frontend/i18n/sp/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jubatu/games/chess/frontend/models'...
Listing './lib/python3.5/site-packages/jubatu/games/chess/frontend/textures'...
Listing './lib/python3.5/site-packages/jubatu/games/chess/i18n'...
Listing './lib/python3.5/site-packages/jubatu/games/chess/i18n/sp'...
Listing './lib/python3.5/site-packages/jubatu/games/chess/i18n/sp/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jubatu_chess-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
